--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios-cache-adapter": "^2.5.0",
+    "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2",
-    "bulma": "^0.8.0"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
