--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios-cache-adapter": "^2.5.0",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
+    "date-fns": "^2.9.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
